syntax = "proto3";
package influxdata.iox.namespace.v1;
option go_package = "github.com/influxdata/iox/namespace/v1";

service NamespaceService {
  // Get all namespaces
  rpc GetNamespaces(GetNamespacesRequest) returns (GetNamespacesResponse);

  // Update retention period
  rpc UpdateNamespaceRetention(UpdateNamespaceRetentionRequest) returns (UpdateNamespaceRetentionResponse);
}

message GetNamespacesRequest {
}

message GetNamespacesResponse {
  repeated Namespace namespaces = 1;
}

message UpdateNamespaceRetentionRequest {
  // Name of the namespace to be set
  string name = 1;

  // Number of hours of the retention period
  int64 retention_hours = 2;
}

message UpdateNamespaceRetentionResponse {
  Namespace namespace = 1;
}

message Namespace {
  // Namespace ID
  int64 id = 1;

  // Name of the Namespace
  string name = 2;

  // Retention period ns
  optional int64 retention_period_ns = 3;
}
